# trace-event-filter

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/trace_event_filter/: __init__.py  core.py
src/trace_event_filter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_trace_event_filter.py
